--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,1 +1,12 @@
-body {}
+body {
+    font-size: 16px;
+    line-height: 26px;
+    color: $default;
+    @extend %quicksand-500;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
