--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,12 +1,30 @@
+html,
 body {
-    font-size: 16px;
-    line-height: 26px;
-    color: $default;
-    @extend %quicksand-500;
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  line-height: 26px;
+  color: $default;
+  @extend %quicksand-500;
+}
+
+.main{
+  flex-grow: 1;
 }
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+a {
+  font-size: 16px;
+  line-height: 36px;
+  color: $default;
+  @extend %quicksand-500;
 }
