--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -443,10 +443,143 @@ footer {
   &__text {
     margin-bottom: 55px;
   }
-  &__link{
+
+  &__link {
     @extend %btn;
   }
 }
+
+.product {
+  padding: 105px 0 120px;
+  text-align: center;
+
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px 30px;
+    margin-bottom: 60px;
+  }
+  &__link{
+    text-transform: uppercase;
+    color: $title;
+    border: 1px solid $accent;
+    padding: 14px 27px;
+    @extend %roboto-400;
+  }
+}
+
+.product-item {
+  max-width: 370px;
+  
+  &__img-box {
+    position: relative;
+    height: 370px;
+    overflow: hidden;
+    margin-bottom: 25px;
+  }
+
+  &__link-box {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 50px;
+    background-color: #fff;
+    width: 220px;
+    height: 50px;
+    margin: 0 auto;
+    box-shadow: 0px 5px 30px 0px rgba(152, 152, 152, 0.2);
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateY(300%);
+    transition: all 0.3s;
+  }
+
+  &__link--line::before,
+  &__link--line::after {
+    content: '';
+    position: absolute;
+    background-color: #fff;
+    width: 1px;
+    height: 30px;
+    background-color: #ececec;
+    top: 10px;
+  }
+
+  &__link--line::before {
+    left: 70px;
+  }
+
+  &__link--line::after {
+    right: 70px;
+  }
+
+  &__link {
+    display: inherit;
+
+    path {
+      transition: all 0.3s;
+    }
+  }
+
+  &__link:hover {
+    path {
+      fill: $accent;
+    }
+  }
+
+  &__images {
+    object-fit: cover;
+  }
+
+  &:hover {
+    .product-item__link-box {
+      transform: translateY(0)
+    }
+  }
+
+  &__title {
+    color: $title;
+    font-size: 22px;
+    padding: 15px 0 20px;
+    @extend %roboto-400;
+  }
+
+  &__price {
+    display: flex;
+    justify-content: center;
+    @extend %roboto-400;
+  }
+
+  &__new-price {
+    padding: 0 12px;
+    color: $title;
+  }
+
+  &__old-price {
+    padding: 0 12px;
+    color: #ccccce;
+    text-decoration: line-through;
+  }
+  &--sale{
+    .product-item__img-box::before{
+      content: 'SALE';
+      @extend %btn;
+      position: absolute;
+      top: 25px;
+      left: 25px;
+      padding: 8px 11px;
+      line-height: 1;
+    }
+  }
+}
+
+.star{
+  margin: 0 auto;
+}
+
+
 
 
 
