--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -459,7 +459,8 @@ footer {
     grid-gap: 40px 30px;
     margin-bottom: 60px;
   }
-  &__link{
+
+  &__link {
     text-transform: uppercase;
     color: $title;
     border: 1px solid $accent;
@@ -470,7 +471,7 @@ footer {
 
 .product-item {
   max-width: 370px;
-  
+
   &__img-box {
     position: relative;
     height: 370px;
@@ -562,8 +563,9 @@ footer {
     color: #ccccce;
     text-decoration: line-through;
   }
-  &--sale{
-    .product-item__img-box::before{
+
+  &--sale {
+    .product-item__img-box::before {
       content: 'SALE';
       @extend %btn;
       position: absolute;
@@ -575,8 +577,72 @@ footer {
   }
 }
 
-.star{
+.star {
   margin: 0 auto;
+}
+
+.promo {
+  background-image: url('../images/promo-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding: 150px 0 160px;
+  text-align: center;
+
+  &__inner {
+    max-width: 570px;
+    width: 100%;
+    margin-left: auto;
+  }
+
+  &__subtitle {
+    color: $accent;
+    text-transform: uppercase;
+    font-size: 22px;
+    margin-bottom: 10px;
+  }
+
+  &__clock {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 55px;
+  }
+  &__clock-item{
+    background-color: #ffffff;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    span{
+      font-size: 48px;
+      @extend %roboto-700;
+      color: $title;
+      margin: 10px 0 7px;
+      
+    }
+  }
+
+  &__link {
+    text-transform: uppercase;
+    color: $title;
+    display: inline-block;
+    border: 1px solid $accent;
+    padding: 7px 31px;
+    margin-top: 55px;
+  }
+}
+
+.partners {
+  padding-top: 75px;
+
+  &__list {
+    height: 170px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 
