--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -23,7 +23,7 @@ $bg: #f6f6f6;
   font-weight: 700;
 }
 
-%btn{
+%btn {
   padding: 12px 26px;
   text-transform: uppercase;
   color: #ffffff;
@@ -32,11 +32,19 @@ $bg: #f6f6f6;
   box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
 }
 
+%checkbox-hidden {
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  position: absolute;
+}
+
 // сніппет для вирішення проблеми з fancybox
 @function max($numbers...) {
   @return m#{a}x(#{$numbers});
 }
+
 @function min($numbers...) {
   @return m#{i}n(#{$numbers});
 }
-
