--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2034,6 +2034,7 @@ footer {
       padding: 35px;
     }
   }
+
   &__left-img {
     float: left;
     margin-right: 30px;
@@ -2083,13 +2084,15 @@ footer {
     @extend %roboto-700;
     font-size: 24px;
   }
-  .comments-title{
+
+  .comments-title {
     @extend %roboto-700;
     color: $title;
     font-size: 24px;
     text-transform: uppercase;
     margin-bottom: 25px;
   }
+
   .comments-form {
     border-bottom: none;
   }
@@ -2157,7 +2160,128 @@ footer {
   }
 }
 
+#map {
+  width: 100%;
+  height: 450px;
+}
 
+.map {
+  padding: 120px 0;
+}
+
+.contact {
+  padding-bottom: 120px;
+
+  &__inner {
+    display: flex;
+  }
+
+  &__info {
+    max-width: 370px;
+    margin-right: 30px;
+  }
+
+  &__info-title {
+    @extend %roboto-700;
+    font-size: 48px;
+    line-height: 58px;
+    color: $title;
+    margin-bottom: 20px;
+  }
+
+  &__info-text {
+    margin-bottom: 60px;
+  }
+
+  &__info-item {
+    margin-top: 55px;
+    color: $title;
+    padding-left: 80px;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: -5px;
+      width: 60px;
+      height: 60px;
+      box-shadow: 0px 5px 20px 0px rgba(146, 146, 146, 0.3);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background-image: url('../images/icons/phone-icon.svg');
+      left: 20px;
+      top: 15px;
+    }
+  }
+
+  &__info-item--location::after {
+    width: 14px;
+    left: 23px;
+    background-image: url('../images/icons/location-icon.svg');
+  }
+
+  &__info-item--email::after {
+    width: 18px;
+    left: 21px;
+    background-image: url('../images/icons/email-icon.svg')
+  }
+
+  &__info-phone {
+    display: block;
+    color: $title;
+  }
+
+  &__form {
+    width: 100%;
+    padding: 60px 40px;
+    box-shadow: 0px 10px 40px 0px rgba(172, 172, 172, 0.3);
+  }
+
+  &__form-title {
+    font-size: 22px;
+    margin-bottom: 20px;
+    color: $title;
+    @extend %roboto-700;
+  }
+
+  &__form-input {
+    width: 100%;
+    height: 60px;
+    display: block;
+    background-color: $bg;
+    border: none;
+    padding: 0 24px;
+    margin-bottom: 30px;
+  }
+
+  &__form-textarea {
+    width: 100%;
+    height: 200px;
+    display: block;
+    resize: none;
+    background-color: $bg;
+    border: none;
+    padding: 24px;
+    margin-bottom: 30px;
+  }
+  &__form-box{
+    display: flex;
+    justify-content: space-between;
+    input{
+      width: 330px;
+    }
+  }
+  &__form-btn{
+    @extend %btn;
+    border: none;
+  }
+}
 
 
 @import 'media';
