--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -139,7 +139,9 @@ footer {
     font-size: 22px;
     line-height: 1;
   }
-
+  &__form{
+    display: flex;
+  }
   &__link {
     display: block;
     margin-bottom: 14px;
@@ -155,6 +157,7 @@ footer {
     width: 100%;
     border: none;
     padding: 12px 10px 12px 15px;
+    margin-right: 3px;
     box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
 
     &::placeholder {
